# ZabavaEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: board.h  defs.h  eval.h  movegen.h  search.h  uci.h
src/: board.cpp  eval.cpp  main.cpp  movegen.cpp  search.cpp  uci.cpp
tests/: tests.cpp  tests.h
